--- a/p8105_hw6_xl2836.md
+++ b/p8105_hw6_xl2836.md
@@ -18,6 +18,10 @@ library(tidyverse)
     ## ✖ dplyr::filter() masks stats::filter()
     ## ✖ dplyr::lag()    masks stats::lag()
 
+``` r
+library(modelr)
+```
+
 Problem 1
 =========
 
@@ -104,6 +108,133 @@ cities_glm =
   nest() %>% 
   mutate(models = map(data, ~glm(bin_diposition ~ victim_age + victim_sex + victim_race, data = .x)), 
          parameters = map(models, broom::tidy)) %>% 
-  select(-models, -data) %>% 
-  unnest()
+  #select(-models, -data) %>% 
+  unnest(parameters)
+```
+
+Problem 2
+=========
+
+Import and tidy data
+--------------------
+
+``` r
+birthweight_df =
+  read_csv("./data/birthweight.csv") %>% 
+  mutate(frace = as.factor(frace)) 
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   .default = col_integer(),
+    ##   gaweeks = col_double(),
+    ##   ppbmi = col_double(),
+    ##   smoken = col_double()
+    ## )
+
+    ## See spec(...) for full column specifications.
+
+``` r
+head(birthweight_df)
+```
+
+    ## # A tibble: 6 x 20
+    ##   babysex bhead blength   bwt delwt fincome frace gaweeks malform menarche
+    ##     <int> <int>   <int> <int> <int>   <int> <fct>   <dbl>   <int>    <int>
+    ## 1       2    34      51  3629   177      35 1        39.9       0       13
+    ## 2       1    34      48  3062   156      65 2        25.9       0       14
+    ## 3       2    36      50  3345   148      85 1        39.9       0       12
+    ## 4       1    34      52  3062   157      55 1        40         0       14
+    ## 5       2    34      52  3374   156       5 1        41.6       0       13
+    ## 6       1    33      52  3374   129      55 1        40.7       0       12
+    ## # ... with 10 more variables: mheight <int>, momage <int>, mrace <int>,
+    ## #   parity <int>, pnumlbw <int>, pnumsga <int>, ppbmi <dbl>, ppwt <int>,
+    ## #   smoken <dbl>, wtgain <int>
+
+Propose model
+-------------
+
+Hypothesis: Assume `babysex`, `fincome` and `gaweeks` are three main factors which influence baby's birth weight.
+
+First, we test `babysex`
+
+``` r
+birthweight_df %>% 
+  ggplot(aes(babysex, bwt, group = babysex)) +
+  geom_boxplot()
+```
+
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-6-1.png)
+
+According to the results, sex has little influence on baby's birh weight. Then, we test `fincome`.
+
+``` r
+birthweight_df %>% 
+  ggplot(aes(fincome, bwt)) +
+  geom_point() +
+  geom_smooth()
+```
+
+    ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
+
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-7-1.png)
+
+The plot above shows family monthly income influence average birth weight of baby. Finally, we test `gaweeks`.
+
+``` r
+birthweight_df %>% 
+  ggplot(aes(gaweeks, bwt)) +
+  geom_point() +
+  geom_smooth()
+```
+
+    ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
+
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-8-1.png)
+
+Gestational age seems to influence baby's birth weight as well. So we create models with three factors. As these three factor have no relationship with each other, we treated them as main effects only.
+
+``` r
+own_model = lm(bwt ~ babysex + fincome + gaweeks, data = birthweight_df) 
+
+broom::tidy(own_model)
+```
+
+    ## # A tibble: 4 x 5
+    ##   term        estimate std.error statistic   p.value
+    ##   <chr>          <dbl>     <dbl>     <dbl>     <dbl>
+    ## 1 (Intercept)   584.      89.8        6.51 8.64e- 11
+    ## 2 babysex       -94.6     14.0       -6.75 1.62e- 11
+    ## 3 fincome         2.16     0.271      7.97 1.96e- 15
+    ## 4 gaweeks        65.3      2.23      29.3  3.53e-172
+
+``` r
+broom::glance(own_model)
+```
+
+    ## # A tibble: 1 x 11
+    ##   r.squared adj.r.squared sigma statistic   p.value    df  logLik    AIC
+    ## *     <dbl>         <dbl> <dbl>     <dbl>     <dbl> <int>   <dbl>  <dbl>
+    ## 1     0.191         0.190  461.      341. 9.08e-199     4 -32789. 65588.
+    ## # ... with 3 more variables: BIC <dbl>, deviance <dbl>, df.residual <int>
+
+Now, we show the plot of model residuals against fitted values.
+
+``` r
+birthweight_df %>% 
+  add_predictions(own_model) %>% 
+  add_residuals(own_model) %>% 
+  ggplot(aes(pred, resid)) +
+  geom_hex()
+```
+
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-10-1.png)
+
+Cross validation
+----------------
+
+``` r
+compared_model1 = lm(bwt ~ blength + gaweeks, data = birthweight_df)
+
+compared_model2 = lm(bwt ~ bhead + blength + babysex + bhead*blength + blength*babysex + babysex*bhead + bhead*blength*babysex, data = birthweight_df)
 ```
