--- a/p8105_hw6_xl2836.md
+++ b/p8105_hw6_xl2836.md
@@ -33,6 +33,7 @@ homicide_df = read_csv("./data/homicide-data.csv") %>%
   mutate(city_state = str_c(city, ", ", state), 
          bin_diposition = ifelse(disposition == "Closed by arrest", 1, 0),
          victim_age = as.numeric(victim_age),
+         victim_race = relevel(as.factor(victim_race), ref = "White"),
          victim_race_cate = ifelse(victim_race == "White", "white", "non-white"),
          victim_race_cate = relevel(as.factor(victim_race_cate), ref = "white")) %>% 
   #filter(city_state != "Dallas, TX")
@@ -64,7 +65,7 @@ head(homicide_df)
 
     ## # A tibble: 6 x 15
     ##   uid   reported_date victim_last victim_first victim_race victim_age
-    ##   <chr>         <int> <chr>       <chr>        <chr>            <dbl>
+    ##   <chr>         <int> <chr>       <chr>        <fct>            <dbl>
     ## 1 Alb-…      20100504 GARCIA      JUAN         Hispanic            78
     ## 2 Alb-…      20100216 MONTOYA     CAMERON      Hispanic            17
     ## 3 Alb-…      20100601 SATTERFIELD VIVIANA      White               15
@@ -79,24 +80,61 @@ Baltimore, MD
 -------------
 
 ``` r
-glm_Baltimore = 
+glm_Baltimore =
   homicide_df %>% 
   filter(city_state == "Baltimore, MD") %>% 
-  glm(bin_diposition ~ victim_age + victim_sex + victim_race, data = .)
+  glm(bin_diposition ~ victim_age + victim_sex + victim_race, data = .) 
 
-broom::tidy(glm_Baltimore)
+glm_Baltimore %>% 
+  broom::tidy()
 ```
 
     ## # A tibble: 7 x 5
     ##   term                estimate std.error statistic  p.value
     ##   <chr>                  <dbl>     <dbl>     <dbl>    <dbl>
-    ## 1 (Intercept)          0.845    0.146        5.78  8.44e- 9
+    ## 1 (Intercept)          0.777    0.0521      14.9   1.62e-48
     ## 2 victim_age          -0.00161  0.000721    -2.23  2.58e- 2
     ## 3 victim_sexMale      -0.209    0.0315      -6.66  3.33e-11
-    ## 4 victim_raceBlack    -0.266    0.143       -1.87  6.19e- 2
-    ## 5 victim_raceHispanic -0.131    0.155       -0.841 4.01e- 1
-    ## 6 victim_raceOther    -0.250    0.239       -1.05  2.96e- 1
-    ## 7 victim_raceWhite    -0.0681   0.147       -0.463 6.43e- 1
+    ## 4 victim_raceAsian     0.0681   0.147        0.463 6.43e- 1
+    ## 5 victim_raceBlack    -0.198    0.0400      -4.96  7.53e- 7
+    ## 6 victim_raceHispanic -0.0625   0.0734      -0.851 3.95e- 1
+    ## 7 victim_raceOther    -0.182    0.196       -0.927 3.54e- 1
+
+``` r
+glm_Baltimore %>% 
+  broom::tidy() %>% 
+  mutate(OR = exp(estimate)) %>%
+  select(term, log_OR = estimate, OR, p.value) 
+```
+
+    ## # A tibble: 7 x 4
+    ##   term                  log_OR    OR  p.value
+    ##   <chr>                  <dbl> <dbl>    <dbl>
+    ## 1 (Intercept)          0.777   2.18  1.62e-48
+    ## 2 victim_age          -0.00161 0.998 2.58e- 2
+    ## 3 victim_sexMale      -0.209   0.811 3.33e-11
+    ## 4 victim_raceAsian     0.0681  1.07  6.43e- 1
+    ## 5 victim_raceBlack    -0.198   0.820 7.53e- 7
+    ## 6 victim_raceHispanic -0.0625  0.939 3.95e- 1
+    ## 7 victim_raceOther    -0.182   0.834 3.54e- 1
+
+``` r
+glm_Baltimore %>% 
+  confint()
+```
+
+    ## Waiting for profiling to be done...
+
+    ##                            2.5 %        97.5 %
+    ## (Intercept)          0.675229354  0.8794382604
+    ## victim_age          -0.003021332 -0.0001948731
+    ## victim_sexMale      -0.271107384 -0.1477875120
+    ## victim_raceAsian    -0.220059766  0.3562145690
+    ## victim_raceBlack    -0.276513313 -0.1198399803
+    ## victim_raceHispanic -0.206474308  0.0814221618
+    ## victim_raceOther    -0.566830586  0.2027872204
+
+So, the odds ratio of solving homicides comparing black victims to white victims keeping all other variable fixed is 0.82.
 
 Each city
 ---------
@@ -108,8 +146,9 @@ cities_glm =
   nest() %>% 
   mutate(models = map(data, ~glm(bin_diposition ~ victim_age + victim_sex + victim_race, data = .x)), 
          parameters = map(models, broom::tidy)) %>% 
-  #select(-models, -data) %>% 
-  unnest(parameters)
+  unnest(parameters) %>% 
+  mutate(OR = exp(estimate)) %>%
+  select(term, log_OR = estimate, OR, p.value)
 ```
 
 Problem 2
@@ -234,7 +273,32 @@ Cross validation
 ----------------
 
 ``` r
-compared_model1 = lm(bwt ~ blength + gaweeks, data = birthweight_df)
-
-compared_model2 = lm(bwt ~ bhead + blength + babysex + bhead*blength + blength*babysex + babysex*bhead + bhead*blength*babysex, data = birthweight_df)
+cv_df = 
+  crossv_mc(birthweight_df, 100) %>% 
+  mutate(train = map(train, as_tibble),
+         test = map(test, as_tibble))
 ```
+
+``` r
+cv_df = 
+  cv_df %>% 
+  mutate(own_mod = map(train, ~lm(bwt ~ babysex + fincome + gaweeks, data = .x)),
+         compared_mod1 = map(train, ~lm(bwt ~ blength + gaweeks, data = .x)),
+         compared_mod2 = map(train, ~lm(bwt ~ bhead + blength + babysex + bhead*blength + blength*babysex + babysex*bhead + bhead*blength*babysex, data = .x))) %>% 
+  mutate(rmse_own = map2_dbl(own_mod, test, ~rmse(model = .x, data = .y)),
+         rmse_mod1 = map2_dbl(compared_mod1, test, ~rmse(model = .x, data = .y)),
+         rmse_mod2 = map2_dbl(compared_mod2, test, ~rmse(model = .x, data = .y)))
+```
+
+Visualization
+
+``` r
+cv_df %>% 
+  select(starts_with("rmse")) %>% 
+  gather(key = model, value = rmse) %>% 
+  mutate(model = str_replace(model, "rmse_", ""),
+         model = fct_inorder(model)) %>% 
+  ggplot(aes(x = model, y = rmse)) + geom_violin()
+```
+
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-13-1.png)
