--- a/p8105_hw6_xl2836.md
+++ b/p8105_hw6_xl2836.md
@@ -20,7 +20,15 @@ library(tidyverse)
 
 ``` r
 library(modelr)
+library(broom)
 ```
+
+    ## 
+    ## Attaching package: 'broom'
+
+    ## The following object is masked from 'package:modelr':
+    ## 
+    ##     bootstrap
 
 Problem 1
 =========
@@ -33,9 +41,8 @@ homicide_df = read_csv("./data/homicide-data.csv") %>%
   mutate(city_state = str_c(city, ", ", state), 
          bin_diposition = ifelse(disposition == "Closed by arrest", 1, 0),
          victim_age = as.numeric(victim_age),
-         victim_race = relevel(as.factor(victim_race), ref = "White"),
-         victim_race_cate = ifelse(victim_race == "White", "white", "non-white"),
-         victim_race_cate = relevel(as.factor(victim_race_cate), ref = "white")) %>% 
+         victim_race = ifelse(victim_race == "White", "white", "non-white"),
+         victim_race = relevel(as.factor(victim_race), ref = "white")) %>% 
   #filter(city_state != "Dallas, TX")
   filter(city_state != "Dallas, TX" & city_state != "Phoenix, AZ" & city_state != "Kansas City, MO" & city_state != "Tulsa, AL")
 ```
@@ -63,18 +70,18 @@ homicide_df = read_csv("./data/homicide-data.csv") %>%
 head(homicide_df)
 ```
 
-    ## # A tibble: 6 x 15
+    ## # A tibble: 6 x 14
     ##   uid   reported_date victim_last victim_first victim_race victim_age
     ##   <chr>         <int> <chr>       <chr>        <fct>            <dbl>
-    ## 1 Alb-…      20100504 GARCIA      JUAN         Hispanic            78
-    ## 2 Alb-…      20100216 MONTOYA     CAMERON      Hispanic            17
-    ## 3 Alb-…      20100601 SATTERFIELD VIVIANA      White               15
-    ## 4 Alb-…      20100101 MENDIOLA    CARLOS       Hispanic            32
-    ## 5 Alb-…      20100102 MULA        VIVIAN       White               72
-    ## 6 Alb-…      20100126 BOOK        GERALDINE    White               91
-    ## # ... with 9 more variables: victim_sex <chr>, city <chr>, state <chr>,
+    ## 1 Alb-…      20100504 GARCIA      JUAN         non-white           78
+    ## 2 Alb-…      20100216 MONTOYA     CAMERON      non-white           17
+    ## 3 Alb-…      20100601 SATTERFIELD VIVIANA      white               15
+    ## 4 Alb-…      20100101 MENDIOLA    CARLOS       non-white           32
+    ## 5 Alb-…      20100102 MULA        VIVIAN       white               72
+    ## 6 Alb-…      20100126 BOOK        GERALDINE    white               91
+    ## # ... with 8 more variables: victim_sex <chr>, city <chr>, state <chr>,
     ## #   lat <dbl>, lon <dbl>, disposition <chr>, city_state <chr>,
-    ## #   bin_diposition <dbl>, victim_race_cate <fct>
+    ## #   bin_diposition <dbl>
 
 Baltimore, MD
 -------------
@@ -83,56 +90,47 @@ Baltimore, MD
 glm_Baltimore =
   homicide_df %>% 
   filter(city_state == "Baltimore, MD") %>% 
-  glm(bin_diposition ~ victim_age + victim_sex + victim_race, data = .) 
+  glm(bin_diposition ~ victim_age + victim_sex + victim_race, data = .,family = binomial()) 
 
-glm_Baltimore %>% 
-  broom::tidy()
-```
-
-    ## # A tibble: 7 x 5
-    ##   term                estimate std.error statistic  p.value
-    ##   <chr>                  <dbl>     <dbl>     <dbl>    <dbl>
-    ## 1 (Intercept)          0.777    0.0521      14.9   1.62e-48
-    ## 2 victim_age          -0.00161  0.000721    -2.23  2.58e- 2
-    ## 3 victim_sexMale      -0.209    0.0315      -6.66  3.33e-11
-    ## 4 victim_raceAsian     0.0681   0.147        0.463 6.43e- 1
-    ## 5 victim_raceBlack    -0.198    0.0400      -4.96  7.53e- 7
-    ## 6 victim_raceHispanic -0.0625   0.0734      -0.851 3.95e- 1
-    ## 7 victim_raceOther    -0.182    0.196       -0.927 3.54e- 1
-
-``` r
-glm_Baltimore %>% 
-  broom::tidy() %>% 
-  mutate(OR = exp(estimate)) %>%
-  select(term, log_OR = estimate, OR, p.value) 
-```
-
-    ## # A tibble: 7 x 4
-    ##   term                  log_OR    OR  p.value
-    ##   <chr>                  <dbl> <dbl>    <dbl>
-    ## 1 (Intercept)          0.777   2.18  1.62e-48
-    ## 2 victim_age          -0.00161 0.998 2.58e- 2
-    ## 3 victim_sexMale      -0.209   0.811 3.33e-11
-    ## 4 victim_raceAsian     0.0681  1.07  6.43e- 1
-    ## 5 victim_raceBlack    -0.198   0.820 7.53e- 7
-    ## 6 victim_raceHispanic -0.0625  0.939 3.95e- 1
-    ## 7 victim_raceOther    -0.182   0.834 3.54e- 1
-
-``` r
-glm_Baltimore %>% 
-  confint()
+exp(cbind(coef(glm_Baltimore), confint(glm_Baltimore))) 
 ```
 
     ## Waiting for profiling to be done...
 
-    ##                            2.5 %        97.5 %
-    ## (Intercept)          0.675229354  0.8794382604
-    ## victim_age          -0.003021332 -0.0001948731
-    ## victim_sexMale      -0.271107384 -0.1477875120
-    ## victim_raceAsian    -0.220059766  0.3562145690
-    ## victim_raceBlack    -0.276513313 -0.1198399803
-    ## victim_raceHispanic -0.206474308  0.0814221618
-    ## victim_raceOther    -0.566830586  0.2027872204
+    ##                                    2.5 %    97.5 %
+    ## (Intercept)          3.2740589 2.0759841 5.2121977
+    ## victim_age           0.9930344 0.9866654 0.9993728
+    ## victim_sexMale       0.4115656 0.3148182 0.5369411
+    ## victim_racenon-white 0.4406080 0.3121625 0.6196693
+
+``` r
+glm_estimate =
+  glm_Baltimore %>% 
+  broom::tidy() %>% 
+  mutate(OR = exp(estimate)) %>%
+  select(term, log_OR = estimate, OR, p.value) 
+
+confint(glm_Baltimore) %>% 
+  broom::tidy() %>% 
+  rename(term = .rownames, CI_lower = X2.5.., CI_higher = X97.5..) %>% 
+  inner_join(glm_estimate) %>% 
+  select(term, OR, CI_lower, CI_higher, everything())
+```
+
+    ## Waiting for profiling to be done...
+
+    ## Warning: 'tidy.matrix' is deprecated.
+    ## See help("Deprecated")
+
+    ## Joining, by = "term"
+
+    ## # A tibble: 4 x 6
+    ##   term                    OR CI_lower CI_higher   log_OR  p.value
+    ##   <chr>                <dbl>    <dbl>     <dbl>    <dbl>    <dbl>
+    ## 1 (Intercept)          3.27    0.730   1.65      1.19    4.30e- 7
+    ## 2 victim_age           0.993  -0.0134 -0.000627 -0.00699 3.22e- 2
+    ## 3 victim_sexMale       0.412  -1.16   -0.622    -0.888   6.80e-11
+    ## 4 victim_racenon-white 0.441  -1.16   -0.479    -0.820   2.68e- 6
 
 So, the odds ratio of solving homicides comparing black victims to white victims keeping all other variable fixed is 0.82.
 
@@ -203,7 +201,7 @@ birthweight_df %>%
   geom_boxplot()
 ```
 
-![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-6-1.png)
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-7-1.png)
 
 According to the results, sex has little influence on baby's birh weight. Then, we test `fincome`.
 
@@ -216,7 +214,7 @@ birthweight_df %>%
 
     ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
 
-![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-7-1.png)
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-8-1.png)
 
 The plot above shows family monthly income influence average birth weight of baby. Finally, we test `gaweeks`.
 
@@ -229,7 +227,7 @@ birthweight_df %>%
 
     ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
 
-![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-8-1.png)
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-9-1.png)
 
 Gestational age seems to influence baby's birth weight as well. So we create models with three factors. As these three factor have no relationship with each other, we treated them as main effects only.
 
@@ -267,7 +265,7 @@ birthweight_df %>%
   geom_hex()
 ```
 
-![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-10-1.png)
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-11-1.png)
 
 Cross validation
 ----------------
@@ -301,4 +299,4 @@ cv_df %>%
   ggplot(aes(x = model, y = rmse)) + geom_violin()
 ```
 
-![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-13-1.png)
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-14-1.png)
