--- a/p8105_hw6_xl2836.md
+++ b/p8105_hw6_xl2836.md
@@ -20,15 +20,7 @@ library(tidyverse)
 
 ``` r
 library(modelr)
-library(broom)
 ```
-
-    ## 
-    ## Attaching package: 'broom'
-
-    ## The following object is masked from 'package:modelr':
-    ## 
-    ##     bootstrap
 
 Problem 1
 =========
@@ -46,22 +38,6 @@ homicide_df = read_csv("./data/homicide-data.csv") %>%
   #filter(city_state != "Dallas, TX")
   filter(city_state != "Dallas, TX" & city_state != "Phoenix, AZ" & city_state != "Kansas City, MO" & city_state != "Tulsa, AL")
 ```
-
-    ## Parsed with column specification:
-    ## cols(
-    ##   uid = col_character(),
-    ##   reported_date = col_integer(),
-    ##   victim_last = col_character(),
-    ##   victim_first = col_character(),
-    ##   victim_race = col_character(),
-    ##   victim_age = col_character(),
-    ##   victim_sex = col_character(),
-    ##   city = col_character(),
-    ##   state = col_character(),
-    ##   lat = col_double(),
-    ##   lon = col_double(),
-    ##   disposition = col_character()
-    ## )
 
     ## Warning in evalq(as.numeric(victim_age), <environment>): NAs introduced by
     ## coercion
@@ -92,16 +68,8 @@ glm_Baltimore =
   filter(city_state == "Baltimore, MD") %>% 
   glm(bin_diposition ~ victim_age + victim_sex + victim_race, data = .,family = binomial()) 
 
-exp(cbind(coef(glm_Baltimore), confint(glm_Baltimore))) 
+#exp(cbind(coef(glm_Baltimore), confint(glm_Baltimore))) %>% 
 ```
-
-    ## Waiting for profiling to be done...
-
-    ##                                    2.5 %    97.5 %
-    ## (Intercept)          3.2740589 2.0759841 5.2121977
-    ## victim_age           0.9930344 0.9866654 0.9993728
-    ## victim_sexMale       0.4115656 0.3148182 0.5369411
-    ## victim_racenon-white 0.4406080 0.3121625 0.6196693
 
 ``` r
 glm_estimate =
@@ -110,11 +78,11 @@ glm_estimate =
   mutate(OR = exp(estimate)) %>%
   select(term, log_OR = estimate, OR, p.value) 
 
-confint(glm_Baltimore) %>% 
+exp(confint(glm_Baltimore)) %>% 
   broom::tidy() %>% 
-  rename(term = .rownames, CI_lower = X2.5.., CI_higher = X97.5..) %>% 
+  rename(term = .rownames, conf_low = X2.5.., conf_high = X97.5..) %>% 
   inner_join(glm_estimate) %>% 
-  select(term, OR, CI_lower, CI_higher, everything())
+  select(term, OR, conf_low, conf_high, everything())
 ```
 
     ## Waiting for profiling to be done...
@@ -125,29 +93,116 @@ confint(glm_Baltimore) %>%
     ## Joining, by = "term"
 
     ## # A tibble: 4 x 6
-    ##   term                    OR CI_lower CI_higher   log_OR  p.value
+    ##   term                    OR conf_low conf_high   log_OR  p.value
     ##   <chr>                <dbl>    <dbl>     <dbl>    <dbl>    <dbl>
-    ## 1 (Intercept)          3.27    0.730   1.65      1.19    4.30e- 7
-    ## 2 victim_age           0.993  -0.0134 -0.000627 -0.00699 3.22e- 2
-    ## 3 victim_sexMale       0.412  -1.16   -0.622    -0.888   6.80e-11
-    ## 4 victim_racenon-white 0.441  -1.16   -0.479    -0.820   2.68e- 6
+    ## 1 (Intercept)          3.27     2.08      5.21   1.19    4.30e- 7
+    ## 2 victim_age           0.993    0.987     0.999 -0.00699 3.22e- 2
+    ## 3 victim_sexMale       0.412    0.315     0.537 -0.888   6.80e-11
+    ## 4 victim_racenon-white 0.441    0.312     0.620 -0.820   2.68e- 6
 
-So, the odds ratio of solving homicides comparing black victims to white victims keeping all other variable fixed is 0.82.
+So, the odds ratio of solving homicides comparing non-white victims to white victims keeping all other variable fixed is 0.44 and the confidence interval is (0.31, 0.62).
 
 Each city
 ---------
+
+``` r
+get_CI = function(model){
+  confint(model) %>% 
+    exp() %>% 
+  #exp(confint(glm_Baltimore)) %>% 
+    broom::tidy() %>% 
+    rename(term = .rownames, conf_low = X2.5.., conf_high = X97.5..) %>% 
+    as.tibble()
+}
+
+# test function
+get_CI(glm_Baltimore)   
+```
+
+    ## # A tibble: 4 x 3
+    ##   term                 conf_low conf_high
+    ##   <chr>                   <dbl>     <dbl>
+    ## 1 (Intercept)             2.08      5.21 
+    ## 2 victim_age              0.987     0.999
+    ## 3 victim_sexMale          0.315     0.537
+    ## 4 victim_racenon-white    0.312     0.620
+
+``` r
+glm_Albuquerque =
+  homicide_df %>% 
+  filter(city_state == "Albuquerque, NM") %>% 
+  glm(bin_diposition ~ victim_age + victim_sex + victim_race, data = .,family = binomial()) 
+
+glm_Albuquerque
+```
+
+    ## 
+    ## Call:  glm(formula = bin_diposition ~ victim_age + victim_sex + victim_race, 
+    ##     family = binomial(), data = .)
+    ## 
+    ## Coefficients:
+    ##          (Intercept)            victim_age        victim_sexMale  
+    ##              1.23193              -0.02302               0.45470  
+    ##    victim_sexUnknown  victim_racenon-white  
+    ##              2.10323              -0.29912  
+    ## 
+    ## Degrees of Freedom: 322 Total (i.e. Null);  318 Residual
+    ##   (55 observations deleted due to missingness)
+    ## Null Deviance:       411.6 
+    ## Residual Deviance: 387.3     AIC: 397.3
+
+``` r
+get_CI(glm_Albuquerque)
+```
+
+    ## # A tibble: 5 x 3
+    ##   term                 conf_low conf_high
+    ##   <chr>                   <dbl>     <dbl>
+    ## 1 (Intercept)             1.64      7.42 
+    ## 2 victim_age              0.964     0.991
+    ## 3 victim_sexMale          0.892     2.77 
+    ## 4 victim_sexUnknown       2.46     37.7  
+    ## 5 victim_racenon-white    0.449     1.22
 
 ``` r
 cities_glm =
   homicide_df %>% 
   group_by(city_state) %>% 
   nest() %>% 
-  mutate(models = map(data, ~glm(bin_diposition ~ victim_age + victim_sex + victim_race, data = .x)), 
+  mutate(models = map(data, ~glm(bin_diposition ~ victim_age + victim_sex + victim_race, data = .x, family = binomial())), 
          parameters = map(models, broom::tidy)) %>% 
-  unnest(parameters) %>% 
+  mutate(CI = map(models, get_CI),
+         results = map2(CI, parameters, inner_join)) %>% 
+  unnest(results) %>% 
   mutate(OR = exp(estimate)) %>%
-  select(term, log_OR = estimate, OR, p.value)
+  filter(term == "victim_racenon-white") %>% 
+  select(city_state, OR, conf_low, conf_high)
+
+head(cities_glm)
 ```
+
+    ## # A tibble: 6 x 4
+    ##   city_state         OR conf_low conf_high
+    ##   <chr>           <dbl>    <dbl>     <dbl>
+    ## 1 Albuquerque, NM 0.741   0.449      1.22 
+    ## 2 Atlanta, GA     0.753   0.424      1.30 
+    ## 3 Baltimore, MD   0.441   0.312      0.620
+    ## 4 Baton Rouge, LA 0.668   0.304      1.41 
+    ## 5 Birmingham, AL  1.04    0.612      1.75 
+    ## 6 Boston, MA      0.115   0.0425     0.259
+
+``` r
+cities_glm %>% 
+  mutate(city_state = fct_reorder(city_state, desc(OR))) %>% 
+  ggplot(aes(x = city_state, y = OR)) +
+  geom_point() +
+  geom_errorbar(aes(ymin = conf_low, ymax = conf_high)) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-7-1.png)
+
+According to this plot, we can find that the confidence intervals of OR in different cities are very different Besides, most estimates of OR are smaller than 1.0, so comparing to white victims there are less solving homicides when victims are non-white.
 
 Problem 2
 =========
@@ -201,7 +256,7 @@ birthweight_df %>%
   geom_boxplot()
 ```
 
-![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-7-1.png)
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-9-1.png)
 
 According to the results, sex has little influence on baby's birh weight. Then, we test `fincome`.
 
@@ -214,7 +269,7 @@ birthweight_df %>%
 
     ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
 
-![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-8-1.png)
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-10-1.png)
 
 The plot above shows family monthly income influence average birth weight of baby. Finally, we test `gaweeks`.
 
@@ -227,7 +282,7 @@ birthweight_df %>%
 
     ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
 
-![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-9-1.png)
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-11-1.png)
 
 Gestational age seems to influence baby's birth weight as well. So we create models with three factors. As these three factor have no relationship with each other, we treated them as main effects only.
 
@@ -265,7 +320,7 @@ birthweight_df %>%
   geom_hex()
 ```
 
-![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-11-1.png)
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-13-1.png)
 
 Cross validation
 ----------------
@@ -299,4 +354,4 @@ cv_df %>%
   ggplot(aes(x = model, y = rmse)) + geom_violin()
 ```
 
-![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-14-1.png)
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-16-1.png)
